maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: illegal start of simple expression
  while() (!estFaceMur) {
        ^Escaper:18: error: ')' expected but '}' found.
} 
^